--- a/style.css
+++ b/style.css
@@ -34,15 +34,23 @@ nav,
 }
 
 nav {
-  justify-content: space-around;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  height: 17vh;
+  padding: 1rem;
+  background-color: #333;
+  color: white;
 }
 
 .nav-links {
-  gap: 2rem;
   list-style: none;
-  font-size: 1.5rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
 }
 
 a {
@@ -73,35 +81,26 @@ a:hover {
 }
 
 .hamburger-menu {
-  position: relative;
-  display: inline-block;
+  display: none;
 }
 
 .hamburger-icon {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 24px;
-  width: 30px;
-  cursor: pointer;
+  gap: 0.3rem;
 }
 
 .hamburger-icon span {
-  width: 100%;
-  height: 2px;
-  background-color: black;
-  transition: all 0.3 ease-in-out;
+  width: 25px;
+  height: 3px;
+  background-color: white;
 }
 
 .menu-links {
-  position: absolute;
-  top: 100%;
-  right: 0;
-  background-color: white;
-  width: fit-content;
-  max-height: 0;
-  overflow: hidden;
-  transition: all 0.3 ease-in-out;
+  display: none;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .menu-links a {
@@ -423,10 +422,45 @@ article .icon {
 /* FOOTER SECTION */
 
 footer {
-  height: 26vh;
-  margin: 0 1rem;
+  background-color: #333;
+  color: white;
+  padding: 1rem 0; /* Adjust padding for medium size */
+  text-align: center;
 }
 
-footer p {
-  text-align: center;
+footer nav {
+  margin-bottom: 1rem;
+}
+
+.nav-links-container {
+  display: flex;
+  justify-content: center;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+  font-size: 1rem; /* Adjust font size for medium size */
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+  }
+
+  .hamburger-menu {
+    display: flex;
+  }
+
+  .menu-links {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
